--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^5.3.7",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.23.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
