--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,8 @@
               "src/styles.scss"
             ], 
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "src/animations.js"
             ]          },
           "configurations": {
             "production": {
